# dotfiles

./: Microsoft.PowerShell_profile.ps1  README.md  README.org  clash_parsers.yaml  dot_bash_profile  dot_bashrc  dot_gitconfig  fonts.conf  install.py  install.pyz  pyproject.toml
AutoHotkey/: emacs-rime-lsfhit.ahk
LinuxScripts/: cfw.sh
Rime/: default.custom.yaml  install.ps1  install.sh  weasel.custom.yaml
SwitchyOmega/: OmegaOptions.bak
Unix/: dot-bash_profile  dot-bashrc  dot-gitconfig  fonts.conf  install.py  install.sh
UnixScripts/: cfw.sh
WindowsScripts/: wsl1-emacs.bat
Winscripts/: disable-ctrl-space.reg  start-vcxsrv.bat
ahk/: emacs-rime-lsfhit.ahk
batch/: emacs.bat  start-vcxsrv.bat
fcitx5/: profile
git/: dot-gitconfig
gnome_dconf/: dash-to-dock.dconf  dash-to-panel.dconf  improved-workspace-indicator.dconf  media-keys.dconf  mediacontrols.dconf  mutter.dconf  trayIconsReloaded.dconf
hunspell/: dot-hunspell_en_US
installer/: .gitignore  Cargo.toml  shell.nix
rime/: cangjie5.dict.yaml  cangjie6.schema.yaml  default.custom.linux.yaml  default.custom.yaml  install-windows.ps1  weasel.custom.yaml
scripts/: wsl-emacs  wsl-emacs.bat  wsl-emacs.ps1  wslemacs  wslemacs.ps1
ssh/: config
subprojects/installer/: .gitignore  build.py  build.sh  pyproject.toml  shell.nix
subprojects/installer/installer/: __init__.py  __main__.py  ahk.py  cmd.py  copy.py  file.py  font.py  job.py  man.py  opt.py  os.py  path.py  rime.py  style.py
switchyomega/: OmegaOptions.bak
warcraft-3/: CustomKeys.txt
wc3/: CustomKeys.txt  wc3.ahk
wsl2/: .bashrc  (+1 more)
(+37 files in other folders)
