
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Eric Zhuo Chen", email = "zyxirchen@outlook.com"},
]
dependencies = [
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "python-lsp-server>=1.7.4",
    "pylsp-mypy>=0.6.7",
    "python-lsp-black>=1.3.0",
    "pyls-isort>=0.2.2",
    "pylsp-rope>=0.1.11",
    "python-lsp-ruff>=1.5.1",
]
